# macrodata-refinement

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: index.rst
docs/api/api/: cli.rst  rest.rst
docs/api/core/: refinement.rst  transformation.rst  validation.rst
docs/api/io/: formats.rst  readers.rst  writers.rst
docs/api/utils/: helpers.rst  logging.rst
docs/api/visualization/: plots.rst
examples/: basic_usage.py
examples/notebooks/: quickstart.ipynb
scripts/: benchmark.py  setup_dev_env.sh
src/mdr/: __init__.py
src/mdr/api/: __init__.py  cli.py  rest.py
src/mdr/core/: __init__.py  refinement.py  transformation.py  validation.py
src/mdr/io/: __init__.py  formats.py  readers.py  writers.py
src/mdr/utils/: __init__.py  helpers.py  logging.py
src/mdr/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.json
tests/integration/: test_api.py  test_workflows.py
tests/unit/: test_core.py  test_io.py  test_utils.py  test_visualization.py
